[package]
name = "vtolvr-radar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
log = "0.4.6"
wasm-logger = "0.2.0"


web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
