[package]
name = "vtolvr-radar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
nalgebra = "0.32.3"
rand = "0.8.5"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-autoprops = "0.4.1"
